--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #008486;
+  background: rgba(2, 198, 255, 1);
 }
 
 .quiz__over__modle div.active {
@@ -14,7 +14,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* border: 3px solid gold; */
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -37,77 +36,68 @@ body {
 }
 #btn__try__again {
   position: absolute;
-  left: 20px;
-  bottom: 10px;
-  width: 120px;
-  height: 40px;
-  /* border: 3px solid gold; */
+  top: 4px;
+  left: 4px;
+  width: 47px;
+  height: 47px;
   border: none;
   box-shadow: 0 0 10px #000;
-  background: #008486;
-  border-radius: 15px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 252, 0, 1) 0%,
+    rgba(2, 198, 255, 1) 100%
+  );
+  border-radius: 10px;
   transition: all 0.2s;
   cursor: pointer;
 }
-#btn__try__again:hover {
-  background-color: #434343;
-  font-weight: bold;
-  font-size: 20px;
-  color: #fff;
-  box-shadow: 2px 2px 20px #fff;
+#btn__try__again img {
+  width: 25px;
+  height: auto;
 }
+#btn__try__again:hover {
+  transform: scale(1.1);
+}
+
 .quiz__container {
-  position: center;
-  top: 0px;
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  width: 90%;
-  padding-bottom: 80px;
-  /* height: 450px; */
-  /* border: 3px solid #000; */
+  position: relative;
+  top: 60px;
+  max-width: 96%;
+  padding: 20px 0 80px 0;
   border-radius: 20px;
   background: #fff;
-  box-shadow: 0 0 50px #000;
+  box-shadow: 0 0 50px #fff;
   display: block;
   margin: 0 auto;
 }
-/* .question {
-  position: relative;
-  top: 10px;
-  left: 10px;
-  width: 90%;
-  height: 50px;
-  border-radius: 15px;
-  background: #dddddd;
-  text-transform: uppercase;
-} */
 .options {
   position: relative;
   margin-top: 15px;
 }
 .option {
   position: relative;
-  top: 10px;
-  left: 10px;
-  width: 90%;
-  height: 50px;
+  padding: 5px;
+  left: 2.5%;
+  width: 95%;
+  min-height: 50px;
   background: #ddd;
   margin-bottom: 5px;
   border-radius: 15px;
 }
-.button {
-  position: relative;
-}
 
 #btn__next {
   position: absolute;
-  bottom: -150px;
+  bottom: 10px;
   left: 10px;
   width: 150px;
   height: 45px;
   font-size: 20px;
   font-weight: 900;
-  background-color: #008486;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 252, 0, 1) 0%,
+    rgba(2, 198, 255, 1) 100%
+  );
   transition: all 0.2s;
   border: none;
   border-radius: 15px;
@@ -117,12 +107,17 @@ body {
 #btn__next:hover {
   background-color: #434343;
   transform: scale(1.05);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 198, 255, 1) 0%,
+    rgba(255, 252, 0, 1) 100%
+  );
 }
 
 @media (max-width: 450px) {
-  /* .quiz__container {
+  .quiz__container {
     width: 100vh;
-  } */
+  }
 }
 
 .option {
@@ -158,7 +153,7 @@ body {
 }
 #answer__tracker {
   position: relative;
-  top: 10px;
+  top: 15px;
   left: 10px;
   display: flex;
   flex-wrap: wrap;
@@ -166,6 +161,7 @@ body {
 }
 
 #answer__tracker div {
+  margin-bottom: 10px;
   width: 20px;
   height: 20px;
   margin-left: 5px;
@@ -178,7 +174,6 @@ body {
 #answer__tracker div.wrong {
   background: #ff4747;
 }
-
 #question {
   position: relative;
   display: flex;
