--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,8 @@
     width: 95%;
   }
   .header .container {
-padding: 5px;  }
+    padding: 5px;
+  }
   .inst__name h1 {
     font-size: 14px;
   }
