--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@
 
 .all-videos {
   position: relative;
+  top: 20px;
   width: 90%;
   display: flex;
   flex-wrap: wrap;
@@ -281,6 +282,10 @@
 .text h4 {
   font-size: 20px;
   cursor: pointer;
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .close__button {
@@ -402,7 +407,7 @@
   position: relative;
   top: 0;
   left: 0;
-  width: 90%;
+  width: 100%;
   height: 100%;
   background: linear-gradient(180deg, gold, white);
 }
